src/pydocstyle/snapshots/ruff__pydocstyle__tests__D100_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    PublicModule: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 0
  fix: ~
  parent: ~

