src/pydocstyle/snapshots/ruff__pydocstyle__tests__D101_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind: PublicClass
  location:
    row: 15
    column: 0
  end_location:
    row: 72
    column: 0
  fix: ~

