src/pydocstyle/snapshots/ruff__pydocstyle__tests__D103_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    PublicFunction: ~
  location:
    row: 400
    column: 4
  end_location:
    row: 400
    column: 17
  fix: ~
  parent: ~

