src/pydocstyle/snapshots/ruff__pydocstyle__tests__D105_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    MagicMethod: ~
  location:
    row: 64
    column: 8
  end_location:
    row: 64
    column: 15
  fix: ~
  parent: ~

