src/pydocstyle/snapshots/ruff__pydocstyle__tests__D107_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    PublicInit: ~
  location:
    row: 60
    column: 8
  end_location:
    row: 60
    column: 16
  fix: ~
  parent: ~
- kind:
    PublicInit: ~
  location:
    row: 534
    column: 8
  end_location:
    row: 534
    column: 16
  fix: ~
  parent: ~

