src/pydocstyle/snapshots/ruff__pydocstyle__tests__D202_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    NoBlankLineAfterFunction: 1
  location:
    row: 142
    column: 4
  end_location:
    row: 142
    column: 24
  fix:
    patch:
      content: ""
      location:
        row: 143
        column: 0
      end_location:
        row: 144
        column: 0
- kind:
    NoBlankLineAfterFunction: 1
  location:
    row: 151
    column: 4
  end_location:
    row: 151
    column: 37
  fix:
    patch:
      content: ""
      location:
        row: 152
        column: 0
      end_location:
        row: 153
        column: 0
- kind:
    NoBlankLineAfterFunction: 1
  location:
    row: 555
    column: 4
  end_location:
    row: 558
    column: 7
  fix:
    patch:
      content: ""
      location:
        row: 559
        column: 0
      end_location:
        row: 560
        column: 0
- kind:
    NoBlankLineAfterFunction: 1
  location:
    row: 568
    column: 4
  end_location:
    row: 571
    column: 7
  fix:
    patch:
      content: ""
      location:
        row: 572
        column: 0
      end_location:
        row: 573
        column: 0

