src/pydocstyle/snapshots/ruff__pydocstyle__tests__D204_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    OneBlankLineAfterClass: 0
  location:
    row: 181
    column: 4
  end_location:
    row: 181
    column: 24
  fix:
    patch:
      content: "\n"
      location:
        row: 182
        column: 0
      end_location:
        row: 182
        column: 0
- kind:
    OneBlankLineAfterClass: 0
  location:
    row: 192
    column: 4
  end_location:
    row: 192
    column: 45
  fix:
    patch:
      content: "\n"
      location:
        row: 193
        column: 0
      end_location:
        row: 193
        column: 0

