src/pydocstyle/snapshots/ruff__pydocstyle__tests__D205_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind: BlankLineAfterSummary
  location:
    row: 200
    column: 4
  end_location:
    row: 203
    column: 7
  fix: ~
  parent: ~
- kind: BlankLineAfterSummary
  location:
    row: 210
    column: 4
  end_location:
    row: 215
    column: 7
  fix:
    location:
      row: 211
      column: 0
    end_location:
      row: 213
      column: 0
    content: "\n"
    message: ~
  parent: ~

