src/pydocstyle/snapshots/ruff__pydocstyle__tests__D207_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind: NoUnderIndentation
  location:
    row: 232
    column: 0
  end_location:
    row: 232
    column: 0
  fix:
    content: "    "
    location:
      row: 232
      column: 0
    end_location:
      row: 232
      column: 0
- kind: NoUnderIndentation
  location:
    row: 440
    column: 0
  end_location:
    row: 440
    column: 0
  fix:
    content: "                                    "
    location:
      row: 440
      column: 0
    end_location:
      row: 440
      column: 4

